<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/alumni_filter_name_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/filter_name"
        android:layout_alignBottom="@+id/alumni_filter_name_edt"
         />

    <TextView
        android:id="@+id/alumni_filter_gender_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/filter_gender"
        android:layout_alignBottom="@+id/alumni_filter_gender_rdg"
        />

    <TextView
        android:id="@+id/alumni_filter_grade_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/filter_grade"
        android:layout_alignBottom="@+id/alumni_filter_grade_txv"        
        />
    <TextView
        android:id="@+id/alumni_filter_major_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/filter_major"
        android:layout_alignBottom="@+id/alumni_filter_major_spn"
        />
    
    <TextView
        android:id="@+id/alumni_filter_city_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/filter_city"
        android:layout_alignBottom="@+id/alumni_filter_city_spn"
        />    
    <TextView
        android:id="@+id/alumni_filter_company_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/filter_company"
        android:layout_alignBottom="@+id/alumni_filter_company_edt"
        />
	<EditText
        android:id="@+id/alumni_filter_name_edt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/alumni_filter_name_txv"
        android:inputType="text"
        />
    	<RadioGroup 
            android:id="@+id/alumni_filter_gender_rdg" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:orientation="horizontal"
            android:layout_toRightOf="@id/alumni_filter_gender_txv"
     	    android:layout_below="@id/alumni_filter_name_edt"
            > 
            <RadioButton 
                android:id="@+id/alumni_filter_gender_btn0" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/filter_gender_default" 
                android:textColor="#ffffff" 
               /> 
            <RadioButton 
                android:id="@+id/alumni_filter_gender_btn1" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/filter_male" 
                android:textColor="#ffffff" 
               /> 
            <RadioButton 
                android:id="@+id/alumni_filter_gender_btn2" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/filter_female" 
                android:textColor="#ffffff" 
               /> 
        </RadioGroup>    
	<EditText
        android:id="@+id/alumni_filter_grade_edt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_toRightOf="@id/alumni_filter_grade_txv"
        android:layout_below="@id/alumni_filter_gender_rdg"
        />
	<Spinner
        android:id="@+id/alumni_filter_major_spn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/alumni_filter_major_txv"
        android:layout_below="@id/alumni_filter_grade_edt"
        />
	<Spinner
        android:id="@+id/alumni_filter_city_spn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/alumni_filter_city_txv"
        android:layout_below="@id/alumni_filter_major_spn"
        />
	<EditText
        android:id="@+id/alumni_filter_company_edt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/alumni_filter_company_txv"
        android:layout_below="@id/alumni_filter_city_spn"
        android:inputType="text"
        />
	<Button
	    android:id="@+id/alumni_filter_ok"
	    android:layout_width="160dp"
	    android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/OK">
	</Button>
	<Button
	    android:id="@+id/alumni_filter_cancel"
	    android:layout_width="200dp"
	    android:layout_alignParentBottom="true"
	    android:layout_toRightOf="@id/alumni_filter_ok"
        android:layout_height="wrap_content"
        android:text="@string/cancel">
	</Button>
</RelativeLayout>
